SimpleComplex/Utils 1.x, 2017-08-05
-----------------------------------
- Generic dependency method for listing registered IDs.
- Documentation of known environment-specific IDs; Slim and SimpleComplex.

SimpleComplex/Utils 1.x, 2017-07-20
-----------------------------------
- Cli script find vendor dir fix.

SimpleComplex/Utils 1.x, 2017-07-12
-----------------------------------
- Release 1.0.

SimpleComplex/Utils 1.x, 2017-07-03
-----------------------------------
- ensurePath() return boolean; false if didn't exist.

SimpleComplex/Utils 1.x, 2017-07-02
-----------------------------------
- Ini parsing: suppress PHP error wrongly reported as syntax warning.
- Ini parsing: on error, check if ini content contains 'special' key.
- ParseIniException type.
- Safer CLI exception handler, which catches errors that it itself
  instigates; errors occurring while instantiating container objects.

SimpleComplex/Utils 1.x, 2017-07-01
-----------------------------------
- Added the locale package's locale-text CLI commands to the common CLI script.

SimpleComplex/Utils 1.x, 2017-06-30
-----------------------------------
- .ini parser support string value replacers.
- ctype_digit() is no good when non-string input.
- PathFileList support long file extensions; containing dotted components.
- Fix that resolvePath didn't understand relative to self without ./ prefix.
- parseIniString/parseIniFile() must return array.
- parseIniString/parseIniFile() must err on failure.
- Handle that native .ini parser fails on keys null, yes, no, true, false, on,
  off, none.

SimpleComplex/Utils 1.x, 2017-06-27
-----------------------------------
- Dependency injection container which also can refer external container.

SimpleComplex/Utils 1.x, 2017-06-24
-----------------------------------
- Fixed some options deficiencies.
- Support return value from CLI commands.
- Expose CLI commands of several packages, if exist.
- More decriptive error message when invalid cli option.
