@@ -3,10 +3,7 @@
 namespace SimpleComplex\Utils\Exception;
 
 /**
- * To differentiate exceptions thrown in-package from exceptions thrown
- * out-package.
- *
- * Please do not use - throw - in code of another package/library.
+ * Generic configuration exception - free to use within other packages.
  *
  * @package SimpleComplex\Utils
  */
