@@ -1,3 +1,15 @@
+SimpleComplex/Utils 1.x, 2017-08-08
+-----------------------------------
+- ConfigurationException is now a generic exception, usable within other
+  packages.
+
+SimpleComplex/Utils 1.x, 2017-08-07
+-----------------------------------
+- Utils::getType() to get class or type.
+- New containerKeys(). And containerIsset/containerGetIfSet now throws exception
+  when arg container isn't array|object.
+- ArrayAccess BogusArray, for testing behaviour of that stupid interface.
+
 SimpleComplex/Utils 1.x, 2017-08-05
 -----------------------------------
 - Generic dependency method for listing registered IDs.
